--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#0066cc"
     android:clickable="true"
-    tools:context=".MainActivity">
+    tools:context=".IntroActivity">
 
     <TextView
         android:layout_width="match_parent"
