--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
         <item name="colorPrimary">#0066cc</item>
         <item name="colorPrimaryDark">#0066cc</item>
         <item name="colorAccent">#0066cc</item>
