--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -25,6 +25,7 @@
             android:id="@+id/recycler_view"/>
 
         <TextView
+            android:id="@+id/no_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
