--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -107,9 +107,9 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@id/show_password_btn"
                 android:background="@drawable/background_btn"
-                android:fontFamily="@font/cabin_medium"
                 android:clickable="true"
-                android:text="Update Data"
+                android:fontFamily="@font/cabin_medium"
+                android:text="Update"
                 android:textAllCaps="false"
                 android:textColor="#000000"
                 android:textSize="16sp" />
