--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -31,7 +31,7 @@
 
             <TextView
                 android:id="@+id/website"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@+id/link"
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="18.5dp"
+                android:layout_marginTop="15dp"
                 android:layout_toRightOf="@id/pin"
                 android:fontFamily="@font/cabin_medium"
                 android:textColor="#000000"
