--- a/app/src/main/res/layout/update_data.xml
+++ b/app/src/main/res/layout/update_data.xml
@@ -9,13 +9,14 @@
         android:id="@+id/update_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:fontFamily="@font/cabin_medium"
+        android:fontFamily="@font/droid_sans_bold"
         android:lineSpacingExtra="8sp"
-        android:layout_marginLeft="8dp"
         android:text="Update Data"
         android:textColor="#000000"
-        android:textSize="18sp" />
+        android:textSize="22sp" />
 
     <EditText
         android:id="@+id/update_website"
@@ -33,7 +34,7 @@
         android:paddingBottom="10dp"
         android:textColor="#000000"
         android:textColorHint="#808080"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/update_email"
@@ -51,7 +52,7 @@
         android:paddingBottom="10dp"
         android:textColor="#000000"
         android:textColorHint="#808080"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/update_password"
@@ -69,5 +70,5 @@
         android:paddingBottom="10dp"
         android:textColor="#000000"
         android:textColorHint="#808080"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 </LinearLayout>
