--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -38,6 +38,7 @@
                 android:fontFamily="@font/cabin_medium"
                 android:textColor="#000000"
                 android:textSize="18sp"
+                android:textIsSelectable="true"
                 android:textStyle="italic" />
 
             <TextView
@@ -59,6 +60,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/email"
+                android:textIsSelectable="true"
                 android:fontFamily="@font/cabin_medium"
                 android:textColor="#000000"
                 android:textSize="18sp" />
